fixed console's overflow, added extra bower packages (js_beautify)

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -156,6 +156,7 @@ header{
 
 #console-editor{
 	@include borderbox;
+	overflow: auto;
 	font-size: $small;
 	background-color: lighten($bg-color, 50%);
 	padding: $size;
